# find_max_curvature

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: find_max_curvature_node.launch
nodes/: find_max_curvature_node.py
